# HockeyMOM

./: .bandit  .bazel_setup.sh  .bazelignore  .bazelrc  .clang-format  .conda  .dockerignore  .gitignore  .gitmodules  .vscode  AGENTS.md  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  DockerBuild.sh  DockerRun.sh  Dockerfile  Doxyfile  MODULE.bazel  Makefile  README.md  README.rst  WORKSPACE.bazel  _setup.py  asan.sh  bdist_wheel  bld  bld.sh  blender.sh  branches.lst  build_all.sh  build_deps.sh  camgpt_benchmark.sh  camgpt_e2e.sh  camgpt_train.sh  compile_commands.json  conftest.py  cuda_conda_packages.txt  doall_1.sh  doall_2.sh  (+54 more)
hmlib/: BUILD.bazel  Doxyfile  __init__.py  async_worker.py  audio.py  builder.py  config.py  constants.py  cv2_to_torch.py  game_audio.py  hm_opts.py  hm_transforms.py  log.py  orientation.py  slurm.py
hmlib/actions/: action_tracker.py
hmlib/algo/: unsharp_mask.py
hmlib/analytics/: analyze_jerseys.py  play_breaks.py
hmlib/aspen/: __init__.py  audit.py  net.py
hmlib/aspen/plugins/: action_factory_plugin.py  action_pose_plugin.py  base.py  boundaries_plugin.py  camera_controller_plugin.py  camera_train.py  camera_train_plugin.py  dataloader_plugin.py  debug_rgb_stats_plugin.py  detector.py  detector_factory.py  detector_factory_plugin.py  detector_plugin.py  ice_rink_boundaries_plugins.py  image_prep_plugin.py  jersey_koshkina_plugin.py  jersey_pose.py  jersey_pose_plugin.py  join_plugin.py  load_plugins.py  mmtracking_plugin.py  model_config_plugin.py  model_factory_plugin.py  overlay_plugin.py  play_tracker_plugin.py  pose_factory_plugin.py  pose_plugin.py  pose_to_det_plugin.py  postprocess_plugin.py  prune_plugin.py  save_plugins.py  stitching_plugin.py  test_output_keys_plugin.py  test_threaded_graph_plugin.py  tracker_plugin.py  trt_nms.py  video_out_plugin.py  video_preview_plugin.py  (+1 more)
hmlib/audio/: whistle.py
hmlib/bbox/: box_functions.py  tiling.py
hmlib/camera/: apply_camera_plugin.py  cam_post_process.py  camera.py  camera_controller_modes.py  camera_dataframe.py  camera_gpt.py  camera_gpt_dataset.py  camera_head.py  camera_model_dataset.py  camera_transformer.py  camera_ui.py  clusters.py  end_zones.py  living_box.py  moving_box.py  play_tracker.py
hmlib/cli/: README.md  __init__.py  analyze_shifts.py  caha_game.py  caha_summary.py  caha_sync.py  camera_annotate.py  camera_compare.py  camgpt_train.py  camtrain.py  concat_oriented_videos.py  concatenate_videos.py  copy_video.py  create_control_points.py  find_ice_rink.py  hmorientation.py  hmtrack.py  mmconfig_to_aspen_yaml.py  pipeline_audit.py  players.py  postprocess_shifts.py  stitch.py  video_clipper.py
hmlib/config/: __init__.py  baseline.yaml
hmlib/datasets/: __init__.py  dataframe.py
hmlib/deploy/: icon.py  youtube.py
hmlib/jersey/: __init__.py  jersey_color.py  jersey_tracker.py  number_classifier.py
hmlib/mmdet_ext/: data_preprocessor.py
hmlib/models/: camformer.py  end_to_end.py  end_to_end_plugin.py  loader.py
hmlib/scoreboard/: scoreboard.py  selector.py
hmlib/scripts/: bdist_wheel.py  develop.py
hmlib/segm/: ice_rink.py  utils.py
hmlib/stitching/: blender2.py  configure_stitching.py  control_points.py  hugin.py  image_remapper.py  laplacian_blend.py  remapper.py  synchronize.py
hmlib/tasks/: multi_pose.py  tracking.py
hmlib/time2score/: api.py  caha_lib.py  caha_schedule_pl.py  database.py  direct.py  normalize.py  sharks_ice_lib.py  util.py
hmlib/tracking_utils/: __init__.py  action_dataframe.py  boundaries.py  bytetrack.py  detection_dataframe.py  ice_rink_segm_boundaries.py  io.py  pose_dataframe.py  segm_boundaries.py  tracking_dataframe.py  utils.py  visualization.py
hmlib/transforms/: __init__.py  overlays.py  perspective_rotation.py  scoreboard_transforms.py  video_frame.py
hmlib/ui/: __init__.py  display_env.py  headless_preview.py  show.py  shower.py  tk.py  var_popup.py
hmlib/utils/: __init__.py  audio.py  checkpoint.py  containers.py  cuda_graph.py  distributions.py  exceptions.py  gpu.py  hockeymom_compat.py  image.py  iterators.py  letterbox.py  mean_tracker.py  nms.py  numpy_pickle_compat.py  path.py  persist_cache_mixin.py  pipeline.py  post_process.py  profiler.py  progress_bar.py  py_utils.py  tensor.py  time.py  torch_backend.py  utils.py  video.py  warp_perspective.py
hmlib/video/: decoder.py  ffmpeg.py  ffmpeg_mux_cmd.py  gstreamer.py  py_amd_codec.py  py_nv_encoder.py  video_out.py  video_out_prep.py  video_stream.py
hmlib/vis/: pt_text.py  pt_visualization.py
hmlib/visualization/: __init__.py  pose_visualizer.py  pytorch_backend_visualizer.py  pytorch_pose_visualizer.py
hockeymom/: .gitignore  BUILD.bazel  CMakeLists.txt  Doxyfile  __init__.py  bdist_wheel.py  core.py  core.pyi
hockeymom/csrc/: CMakeLists.txt  Foo.cpp  ImagePostProcess.cpp
hockeymom/scripts/: bdist_wheel.py  link_ext.py
hockeymom/src/: BUILD.bazel  PythonBindings.cpp
tests/: BUILD.bazel  aspen_plugin_harness.py  cli_script_smoke.sh  conftest.py  python_runtime.sh  simple_run.py  test_apply_camera_plugin_dimensions.py  test_aspen_cuda_graph_pipeline.py  test_aspen_dataloader_plugin.py  test_aspen_multipath_validation.py  test_aspen_output_keys.py  test_aspen_plugins_isolation.py  test_aspen_threaded_graph.py  test_audio_mux.py  test_box_equivalence.py  test_bytetrack_cuda.py  test_bytetrack_python.py  test_caha_schedule_pl.py  test_camera_config_paths.py  test_camera_controller_plugin_gpt.py  test_camera_gpt.py  test_camera_transformer.py  test_camera_ui_dialog.py  test_camera_ui_flag.py  test_completed_pass_event.py  test_concat_oriented_videos.py  test_config_override_strict.py  test_create_control_points_scale.py  test_cuda_graph_callable.py  test_dataframe_samples.py  test_deploy_dir_arg.py  test_ffmpeg_remux.py  test_headless_preview_runtime.py  test_headless_preview_runtime.sh  test_hm_cuda_container.py  test_hmtrack_lowmem_overrides.py  test_image_color_adjust.py  test_import_time2score_equivalence.py  test_import_time2score_penalties.py  test_import_time2score_scoring_times.py  (+92 more)
tests/testdata/: sharks-12-1-r3-long-54153.xlsx
(+827 files in other folders)
