exports_files(
    ["Pipfile", "Pipfile.lock", "pyproject.toml"]
)


# Aggregated docs target: builds all available Doxygen docs (hockeymom core + hmlib).
filegroup(
    name = "all_doxygen_docs",
    srcs = [
        "//hockeymom:doxygen_docs",
        "//hmlib:doxygen_docs",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "with_openexr",
    define_values = {"with_openexr": "true"},
)

config_setting(
    name = "with_exiv2",
    define_values = {"with_exiv2": "true"},
)
