###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
# bazel_dep(name = "rules_python", version = "1.0.0")

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# pip.parse(
#     hub_name = "pip",
#     python_version = "3.11",
#     requirements_lock = "//app:requirements_lock.txt",
# )

# python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# python.toolchain(
#     ignore_root_user_error = True,
#     is_default = True,
#     python_version = "3.11",
# )

# use_repo(pip, "pip")
# use_repo(python, "python_3_11")
