[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmlib"
version = "0.1.0"
description = "HockeyMOM Python tools and pipeline helpers"
requires-python = ">=3.10"

[project.scripts]
hmtrack = "hmlib.cli.hmtrack:main"
hmstitch = "hmlib.cli.stitch:main"
hmcreate_control_points = "hmlib.cli.create_control_points:main"
hmplayers = "hmlib.cli.players:main"
hmfind_ice_rink = "hmlib.cli.find_ice_rink:main"
hmpostprocess_shifts = "hmlib.cli.postprocess_shifts:main"
hmorientation = "hmlib.cli.hmorientation:main"
hmconcatenate_videos = "hmlib.cli.concatenate_videos:main"
hmcamera_annotate = "hmlib.cli.camera_annotate:main"
hmscoreboard = "hmlib.scoreboard.selector:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hmlib*", "hockeymom*"]
exclude = ["tests*", "openmm*", "hockeymom/src*"]

[tool.setuptools.package-data]
hmlib = [
    "py.typed",
    "images/*.svg",
    "images/*.png",
    "config/**/*.yaml",
]
hockeymom = [
    "core.pyi",
    "_hockeymom*.so",
]

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
extend-exclude = '''
(bazel-.*
|bdist_wheel
|build
|dist
|external
|openmm
|output_workdirs
|xmodels
|.*\.ipynb)
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "bazel-*",
    "bdist_wheel",
    "build",
    "dist",
    "external",
    "openmm",
    "output_workdirs",
    "xmodels",
    "*.ipynb",
]

[tool.ruff.lint]
# Allow scoped imports for faster startup
extend-ignore = ["E402", "PLC0415"]

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
python_functions = "should_*"
testpaths = ["tests", "hmlib/aspen/tests"]
markers = ["ui: browser-based UI tests (Playwright/Chromium)"]

# pytest-asyncio settings
asyncio_mode = "auto"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = []


[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
follow_imports = "silent"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "pytest_docker.*",
]
ignore_missing_imports = true


[tool.pydocstyle]
convention = "pep257"
match = "^(?!test_)(.*)(?<!config_parser)\\.py$"
add-ignore = [
    # See http://www.pydocstyle.org/en/stable/error_codes.html
    "D1",  # Missing docstrings. We rely on code reviews. Names are often descriptive enough and don't need additional docstring.
    "D202",  # "No blank lines allowed after function docstring" is false positive caused by black formatter.
    "D204",  # "1 blank line required after class docstring"
    "D401",  # "First line should be in imperative mood"
    "D413",  # "Missing blank line after last section"
]
