load("@rules_python//python:defs.bzl", "py_binary")
load("//tools/python/library:defs.bzl", "python_library", "wheel")

_SOURCES = glob(
    [
        "**/*.py",
        "**/*.pyi",
    ],
    exclude = ["scripts/**"],
)

_DATA = [
    "py.typed",
    "pretrained/mmdetection/yolox_s_8x8_300e_coco_80e_ch_with_detector_prefix.pth",
    "pretrained/mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco/ice_rink_iter_30000.pth",
] + glob(["**/*.yaml"])

python_library(
    name = "hmlib",
    srcs = _SOURCES,
    imports = [".."],  # Add the parent directory to PYTHONPATH
    test_deps = [
    ],
    version = "0.1.0",
    visibility = ["//visibility:public"],
    wheel = wheel(
        name = "hmlib",
        entry_points = {
            "console_scripts": [
                "hmtrack = hmlib.cli.hmtrack:main",
                "hmstitch = hmlib.cli.stitch:main",
                "hmcreate_control_points = hmlib.cli.create_control_points:main",
                "hmplayers = hmlib.cli.players:main",
                "hmfind_ice_rink = hmlib.cli.find_ice_rink:main",
                "hmvideo_clipper = hmlib.cli.video_clipper:main",
                "hmorientation = hmlib.cli.hmorientation:main",
            ],
        },
        requires = [
        ],
    ),
    wheel_deps = [
        ":wheel_data_files",
    ],
)

filegroup(
    name = "wheel_data_files",
    srcs = [
        "images/sports_ai_watermark.png",
        "pretrained/mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco/ice_rink_iter_30000.pth",
        "pretrained/mmdetection/yolox_s_8x8_300e_coco_80e_ch_with_detector_prefix.pth",
        "py.typed",
    ] + glob(["**/*.yaml"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bdist_wheel",
    srcs = ["scripts/bdist_wheel.py"],
    data = [":hmlib.wheel"],
)
