load("@rules_python//python:defs.bzl", "py_binary")
load("//tools/python/library:defs.bzl", "python_library", "wheel")

_SOURCES = glob(
    [
        "**/*.py",
        "**/*.pyi",
    ],
    exclude = ["scripts/**"],
)

python_library(
    name = "hmlib",
    srcs = _SOURCES,
    data = [
        "py.typed",
        ":embed_enblend",
        ":embed_multiblend",
    ],
    lint_tests = False,
    imports = [".."],  # Add the parent directory to PYTHONPATH
    test_deps = [
    ],
    version = "0.1.0",
    visibility = ["//visibility:public"],
    wheel = wheel(
        name = "hmlib",
        entry_points = {
            "console_scripts": [
                "hmtrack = hmlib.cli.hmtrack:main",
                "hmstitch = hmlib.cli.stitch:main",
                "hmcreate_control_points = hmlib.cli.create_control_points:main",
                "hmplayers = hmlib.cli.players:main",
                "hmfind_ice_rink = hmlib.cli.find_ice_rink:main",
                "hmpostprocess_shifts = hmlib.cli.postprocess_shifts:main",
                "hmorientation = hmlib.cli.hmorientation:main",
            "hmconcatenate_videos = hmlib.cli.concatenate_videos:main",
            "hmcamera_annotate = hmlib.cli.camera_annotate:main",
        ],
        },
        requires = [
        ],
    ),
    wheel_deps = [
        ":wheel_data_files",
    ],
)

genrule(
    name = "embed_multiblend",
    srcs = ["@multiblend//:multiblend"],
    outs = ["bin/multiblend"],
    cmd = "cp $(location @multiblend//:multiblend) $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "embed_enblend",
    srcs = ["@enblend-enfuse//src:enblend"],
    outs = ["bin/enblend"],
    cmd = "cp $(location @enblend-enfuse//src:enblend) $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wheel_data_files",
    srcs = [
        ":embed_enblend",
        ":embed_multiblend",
        "images/sports_ai_watermark.png",
        "py.typed",
        # "@multiblend//:multiblend",
    ] + glob(["**/*.yaml"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bdist_wheel",
    srcs = ["scripts/bdist_wheel.py"],
    data = [":hmlib.wheel"],
    tags = ["python-wheel", "manual"],
)

py_binary(
    name = "develop",
    srcs = ["scripts/develop.py"],
    tags = ["manual"],
)

py_binary(
    name = "hm_camera_annotate",
    srcs = ["cli/camera_annotate.py"],
    main = "cli/camera_annotate.py",
    deps = [":hmlib.lib"],
)

# Local Doxygen documentation for hmlib Python library
genrule(
    name = "doxygen_docs",
    srcs = ["Doxyfile"] + glob(["**/*.py"]),
    cmd = "if command -v doxygen >/dev/null 2>&1; then doxygen $(location Doxyfile) && tar -czf $@ -C doxygen_out html xml; else echo 'doxygen missing' > $@; fi",
    outs = ["hmlib_doxygen_docs.tar.gz"],
    visibility = ["//visibility:public"],
    tags = ["manual"],
)
