load("@rules_python//python:defs.bzl", "py_binary")
load("//tools/python/library:defs.bzl", "python_library", "wheel")

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:arm64"],
)

config_setting(
    name = "aarch64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

_MULTIBLEND_DATA = select({
    ":arm64": [],
    ":aarch64": [],
    "//conditions:default": [":embed_multiblend"],
})

_MULTIBLEND_COMPATIBILITY = select({
    ":arm64": ["@platforms//:incompatible"],
    ":aarch64": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

_SOURCES = glob(
    [
        "**/*.py",
        "**/*.pyi",
    ],
    exclude = ["scripts/**"],
)

exports_files(
    ["cli/create_control_points.py"],
    visibility = ["//tests:__pkg__"],
)

python_library(
    name = "hmlib",
    srcs = _SOURCES,
    data = [
        "py.typed",
        "images/scoreboard_selector_thank_you.svg",
        ":embed_enblend",
    ] + _MULTIBLEND_DATA,
    lint_tests = False,
    imports = [".."],  # Add the parent directory to PYTHONPATH
    test_deps = [
    ],
    version = "0.1.0",
    visibility = ["//visibility:public"],
    wheel = wheel(
        name = "hmlib",
        entry_points = {
            "console_scripts": [
                "hmtrack = hmlib.cli.hmtrack:main",
                "hmstitch = hmlib.cli.stitch:main",
                "hmcreate_control_points = hmlib.cli.create_control_points:main",
                "hmplayers = hmlib.cli.players:main",
                "hmfind_ice_rink = hmlib.cli.find_ice_rink:main",
                "hmpostprocess_shifts = hmlib.cli.postprocess_shifts:main",
                "hmorientation = hmlib.cli.hmorientation:main",
                "hmscoreboard = hmlib.scoreboard.selector:main",
            "hmconcatenate_videos = hmlib.cli.concatenate_videos:main",
            "hmcamera_annotate = hmlib.cli.camera_annotate:main",
        ],
        },
        requires = [
        ],
    ),
    wheel_deps = [
        ":wheel_data_files",
    ],
)

genrule(
    name = "embed_multiblend",
    srcs = ["@multiblend//:multiblend"],
    outs = ["bin/multiblend"],
    cmd = "cp $(location @multiblend//:multiblend) $@ && chmod +x $@",
    target_compatible_with = _MULTIBLEND_COMPATIBILITY,
    visibility = ["//visibility:public"],
)

genrule(
    name = "embed_enblend",
    srcs = ["@enblend-enfuse//src:enblend"],
    outs = ["bin/enblend"],
    cmd = "cp $(location @enblend-enfuse//src:enblend) $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wheel_data_files",
    srcs = [
        ":embed_enblend",
        "images/scoreboard_selector_thank_you.svg",
        "images/sports_ai_watermark.png",
        "py.typed",
        # "@multiblend//:multiblend",
    ] + _MULTIBLEND_DATA + glob(["**/*.yaml"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bdist_wheel",
    srcs = ["scripts/bdist_wheel.py"],
    data = [":hmlib.wheel"],
    tags = ["python-wheel", "manual"],
)

py_binary(
    name = "develop",
    srcs = ["scripts/develop.py"],
    tags = ["manual"],
)

py_binary(
    name = "hm_camera_annotate",
    srcs = ["cli/camera_annotate.py"],
    main = "cli/camera_annotate.py",
    deps = [":hmlib.lib"],
)

# Local Doxygen documentation for hmlib Python library
genrule(
    name = "doxygen_docs",
    srcs = ["Doxyfile"] + glob(["**/*.py"]),
    cmd = "if command -v doxygen >/dev/null 2>&1; then doxygen $(location Doxyfile) && tar -czf $@ -C doxygen_out html xml; else echo 'doxygen missing' > $@; fi",
    outs = ["hmlib_doxygen_docs.tar.gz"],
    visibility = ["//visibility:public"],
    tags = ["manual"],
)
