load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@py_soabi//:soabi.bzl", "SOABI", "PLATFORM", "ABI")  # Now this load will succeed


# Use a genrule to rename _hockeymom.so to include the SOABI.
genrule(
  name = "hockeymom_ext",
  srcs = ["//hockeymom/src:_hockeymom.so"],
  outs = [ "_hockeymom.%s.so" % SOABI ],
  cmd = "cp $(location //hockeymom/src:_hockeymom.so) $@",
  visibility = ["//visibility:public"],
)

py_wheel(
    name = "hockeymom_wheel",
    distribution = "hockeymom",
    version = "0.1.0",
    python_tag = ABI,
    abi = ABI,
    platform = PLATFORM,
    deps = [
        ":hockeymom_ext",
        ":hockeymom",
    ],
)

py_library(
  name = "hockeymom",
  data = [":hockeymom_ext"],
  srcs = [
    "__init__.py",
    "core.py",
  ],
  visibility = ["//visibility:public"],
)

genrule(
    name = "copy_wheel_script",
    srcs = [":hockeymom_wheel"],
    outs = ["copy_wheel.sh"],
    cmd = """
    echo '#!/bin/bash' > $@
    echo 'mkdir -p dist' >> $@
    echo 'cp $(location :hockeymom_wheel) dist/' >> $@
    echo 'echo "Wheel copied to dist/"' >> $@
    chmod +x $@
    """,
)

# sh_binary(
#     name = "install_local",
#     srcs = [":copy_wheel_script"],
#     data = [":hockeymom_wheel"],
# )

# py_binary(
#     name = "install_local",
#     srcs = ["install_local.py"],
#     data = [":hockeymom_wheel"],
# )

py_binary(
    name = "bdist_wheel",
    srcs = ["scripts/bdist_wheel.py"],
    data = [":hockeymom_wheel"],
)
